@@ -36,6 +36,7 @@ namespace ba = boost::algorithm;
 
 static bool debug = false;              // set to true (from R, see below) for debug messages 
 static int maxIntAsYYYYMMDD = 29991231; // cutoff values below which we treat ints as YYYYMMDD  
+static int maxIntAsDate = 199999;       // cutoff values below which we treat ints as Dates
 
 const std::string sformats[] = {
     "%Y-%m-%d %H:%M:%S%f",
@@ -333,7 +334,7 @@ Rcpp::NumericVector anytime_cpp(SEXP x,
     if (Rcpp::is<Rcpp::CharacterVector>(x)) {
         // already a character -- so parse from character and convert
         return convertToTime<const char*, STRSXP>(x, tz, asUTC, asDate);
-        
+               
     } else if (Rcpp::is<Rcpp::IntegerVector>(x) && INTEGER(x)[0] <= maxIntAsYYYYMMDD) {
         // use lexical cast to convert an int to character -- then parse and convert
         return convertToTime<int, INTSXP>(x, tz, asUTC, asDate);
@@ -343,7 +344,10 @@ Rcpp::NumericVector anytime_cpp(SEXP x,
         // 200150315 'mistakenly' cast to numeric, or we actually
         // are a proper large numeric (ie as.numeric(Sys.time())
         Rcpp::DatetimeVector v(x, asUTC ? "UTC" : tz.c_str());
-        if (v[0] <= maxIntAsYYYYMMDD) {  // somewhat arbitrary cuttoff
+        if (v[0] <= maxIntAsDate) {  		// if less that this somewhat arbitrary value
+            Rcpp::DateVector dv(x);             // then consider values to be Dates instead
+            return dv;
+        } else if (v[0] <= maxIntAsYYYYMMDD) {  // somewhat arbitrary cuttoff
             // actual integer date notation: convert to string via lexical cast
             // and then parse that string as usual
             return convertToTime<double, REALSXP>(x, tz, asUTC, asDate);
