@@ -3,10 +3,15 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/anytime/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/anytime/issues/#1}{##1}}
 
-\section{Changes in anytime version 0.2.2 (2017-xx-yy)}{
+\section{Changes in anytime version 0.2.2 (2017-03-yy)}{
   \itemize{
-    \item Address a corner case of integer-typed (large) values
-    corresponding to \code{POSIXct} time (Closes \ghit{#56})
+    \item Address corner case of integer-typed (large) values
+    corresponding to \code{POSIXct} time (PR \ghpr{57} closing \ghit{#56})
+    \item Add special case for \sQuote{Europe/London} and 31 Oct 1971
+    BST change to avoid a one-hour offset error (\ghpr{58} fixing
+    \ghit{36} and \ghit{51}) 
+    \item Address another corner case of numeric values corresponding to
+    \code{Date} types which are now returned as \code{Date}
   }
 }
 
